# calculator

./: AppCore.cpp  AppCore.h  CMakeLists.txt  CalcButton.qml  Unit_test.cpp  calculator.cpp  calculator.h  calculator.js  calculator.qml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  test.cpp  test.h
